--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,8 @@ TODO:
 
 + map has to start at world-position (0, 0) so that calculated position of ME in map-space can easily be translated into world-space
 + map-creator should not be child of each map-tile. Instead, each map-tile should just get the created material
++ improve hex mesh. Make it more smooth at the corners and on top
++ let camera move more smooth to ME position
++ let user pan map (should re-center above ME after about five seconds after panning)
++ use pictures of Duong, Eugen and Johannes as avatars and players on map in game
++ don't start flipping, when game starts. Wait a few seconds, until player locations are fix
