--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,15 @@
 TODO:
 
-+ map has to start at world-position (0, 0) so that calculated position of ME in map-space can easily be translated into world-space
-+ map-creator should not be child of each map-tile. Instead, each map-tile should just get the created material
++ tiles should flip slower and around 360°. When flipping is done, it should have the color of the conquering team
 + improve hex mesh. Make it more smooth at the corners and on top
++ frazzle the borders of the map
++ add a background (maybe parallax) behind the map
 + let camera move more smooth to ME position
 + let user pan map (should re-center above ME after about five seconds after panning)
 + use pictures of Duong, Eugen and Johannes as avatars and players on map in game
 + don't start flipping, when game starts. Wait a few seconds, until player locations are fix
++ map has to start at world-position (0, 0) so that calculated position of ME in map-space can easily be translated into world-space
++ map-creator should not be child of each map-tile. Instead, each map-tile should just get the created material
 + discuss coloring and design of the App. Flat design?
 + create an App icon
++ hide maptile prefab somewhere far away in the world
